--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 finbert_sentiment_components.pkl filter=lfs diff=lfs merge=lfs -text
+var_bi_macro_predictor.pkl filter=lfs diff=lfs merge=lfs -text
+xgb_bi_macro_predictor.pkl filter=lfs diff=lfs merge=lfs -text
